--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # database configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/system_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.username=admin
 spring.datasource.password=Boxer2321996
 
 
