--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # database configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/system_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=Boxer2321996
 
 
 
 # hibernate configurations
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialet= org.hibernate.dialect.MySQL5Dialect
 
