--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <junit-jupiter-engine.version>5.3.2</junit-jupiter-engine.version>
         <bootstrap.version>4.3.1</bootstrap.version>
         <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
+            <jackson.version>2.7.0</jackson.version>
     </properties>
 
     <dependencies>
@@ -189,6 +190,11 @@
             <artifactId>jython</artifactId>
             <version>2.7.1b3</version>
         </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
         <!-- Password Validation -->
         <dependency>
             <groupId>org.passay</groupId>
@@ -205,6 +211,12 @@
             <artifactId>greenmail</artifactId>
             <version>1.5.5</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
         </dependency>
     </dependencies>
 
