Kleine Änderungen der Konfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ support.email=schluessel.web@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.protocol=smtps
-spring.mail.username=schluessel.web@gmail.com
-spring.mail.password=Boxer2321996
+spring.mail.username=example@mail.com
+spring.mail.password=111
 spring.mail.properties.mail.transport.protocol=smtps
 spring.mail.properties.mail.smtps.auth=true
 spring.mail.properties.mail.smtps.starttls.enable=true
